# emchipten

./: .gitignore  .gitmodules  Cargo.toml  README.md  gen.py  index.html  main.js  player_template.html  worker.js
docs/: 15PUZZLE.ch8.txt  15PUZZLE.html  15PUZZLE.wasm  15PUZZLE.wast.txt  BLINKY.ch8.txt  BLINKY.html  BLINKY.wasm  BLINKY.wast.txt  BLITZ.html  BLITZ.wasm  BLITZ.wast.txt  BRIX.ch8.txt  BRIX.html  BRIX.wasm  BRIX.wast.txt  CONNECT4.ch8.txt  CONNECT4.html  CONNECT4.wasm  CONNECT4.wast.txt  GUESS.ch8.txt  GUESS.html  GUESS.wasm  GUESS.wast.txt  HIDDEN.ch8.txt  HIDDEN.html  HIDDEN.wasm  HIDDEN.wast.txt  KALEID.ch8.txt  KALEID.html  KALEID.wasm  KALEID.wast.txt  MAZE.ch8.txt  MAZE.html  MAZE.wasm  MAZE.wast.txt  MERLIN.html  MERLIN.wasm  MERLIN.wast.txt  MISSILE.ch8.txt  MISSILE.html  (+50 more)
roms/: ZERO
src/: builder.rs  cfg.rs  error.rs  ffi.rs  instruction.rs  main.rs  trans.rs
