[package]
name = "emchipten"
version = "0.1.0"
authors = ["Sergey Pepyakin <s.pepyakin@gmail.com>"]

[dependencies]
byteorder = "0.5"
enum_primitive = "*"
error-chain = "0.10.0"
binaryen = { path = "../binaryen-rs", version = "0.1.0" }
docopt = "0.8"
serde = "1.0"
serde_derive = "1.0"

[profile.dev]
panic="abort"

[profile.release]
panic="abort"
